0.1    2020-01-02: Created git project
0.2    2020-01-02: Added vols [inicial]: estados brasileiros, machado de assis, pimentel, queiros and quental
0.3    2020-01-02: Added secret/special volume: asteorids.txt
0.4    2020-01-02: Inicial dwd12.sh file. Working without any customization
0.5    2020-01-02: dwd12 with -s option, to set DWD12 set.
0.6    2020-01-02: dwd12 using Volume Set paths
0.7    2020-01-02: dwd12 with -w option, to set passphrase size (in number of words)
0.8    2020-01-02: dwd12 -i shows information about the volumes set.
0.9    2020-01-02: dwd12 -v to verbose
0.10   2020-01-02: using the number of volumes in set.
0.11   2020-01-02: dwd12 -l lists all available sets.
0.12   2020-01-03: dwd12 -X lists all secret volumes available.
0.13   2020-01-03: dwd12 -x _sec set the secret file to use (not using yet)
0.14   2020-01-03: dwd12 working with secret volume.
0.15   2020-01-03: dwd12 -z _sec set the secret file and force 1 use.
0.16   2020-01-03: dwd12 fixed bug - error when duplicate volumes available.
0.17   2020-01-03: dwd12 -i shows the list of volumes in choosen set.
0.18   2020-01-09: dwd12: fixed bug in -x option.
0.19   2020-01-09: dwd12: using configuration file (not working yet)
0.20   2020-01-10: dwd12: fixed config-file reading
0.21   2020-01-10: added volume set "fast" (7 vols)
A0.1   2020-01-21: dwd12admin: concept
A0.2   2020-02-21: dwd12admin: -d to set destination (global, local or user)
A0.3   2020-02-22: dwd12admin: -n to set destination name
A0.4   2020-02-22: dwd12admin: -c to copy a set to another name/local
A0.5   2020-02-22: dwd12admin: -x to copy a common volume to be a secret volume
A0.6   2020-02-27: dwd12admin: -i to install a set in current directory
A0.7   2022-11-05: dwd12: documentation for shdoc
A0.8   2022-11-05: dwd12 translated to pt_BR (using gettext)
A0.9   2022-11-05: Makefile fixed to install pt_BR translation
A0.10  2022-11-05: 3 secret volumes added: multiverso[123]