@@ -29,3 +29,4 @@ A0.7   2022-11-05: dwd12: documentation for shdoc
 A0.8   2022-11-05: dwd12 translated to pt_BR (using gettext)
 A0.9   2022-11-05: Makefile fixed to install pt_BR translation
 A0.10  2022-11-05: 3 secret volumes added: multiverso[123]
+A0.11  2022-11-09: Makefile with user-sets command
